# Philosopher_parser

./: .env.example  .gitignore  0_docs_to_text.ipynb  1_to_hierarchical_graph.ipynb  2_test_embeder.ipynb  3_test_graph_embeder.ipynb  Dockerfile  LICENSE  README.md  main.py  mcp_server.py  pyproject.toml  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ghrc.yml  linter.yml  test.yml
__input_TEST__/: test.docx
__output__/: study_fies.md  study_fies_no_uri.md
src/: __init__.py  connector.py  file_reader.py  graph_parser.py  models.py  retriver.py  utils.py
src/graphs/: __init__.py  file_reader.py  graph_parser.py  models.py  retriver.py  utils.py
src/mcp/: __init__.py  mcp_server.py  rag_api_client.py
src/model_inf/: __init__.py  ocr_exec.py  summary_exec.py  vectorizer_exec.py
tests/: test_file_reader.py  test_file_reader_methods.py  test_graph_parser.py  test_graph_parser_methods.py  test_ocr.py  test_retriver.py  test_retriver_methods.py  test_summary.py  test_vectorizer.py
