[project]
name = "philosopher-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "markitdown[docx]>=0.1.3",
    "matplotlib>=3.10.6",
    "qwen-vl-utils[decord]>=0.0.14",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
]
