[project]
name = "philosopher-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "markitdown[docx]>=0.1.3",
    "matplotlib>=3.10.6",
    "openai>=2.7.1",
    "pydantic>=2.12.3",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "qwen-vl-utils[decord]>=0.0.14",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
mcp = [
    "fastmcp>=2.14.1",
    "mcp>=1.25.0",
]
view = [
    "pyvis>=0.3.2",
    "streamlit>=1.52.2",
]
